--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -6,6 +6,7 @@
     flex-grow: 2;
     flex-basis: 50vw;
     width: 100%;
+    order: 1;
 }
 
 .timer-card {
