--- a/src/components/TimerSettings.css
+++ b/src/components/TimerSettings.css
@@ -13,5 +13,5 @@
 .timer-settings-container {
     text-align: right;
     padding: 8px;
-    width: 100%;
+    width: 50%;
 }
